<resources>
    <string name="app_name">AcademicoSync</string>
    <string name="title_activity_navegacion_principal">navegacion_principal</string>
    <string name="title_home">Home</string>
    <string name="title_course">Cursos</string>
    <string name="title_sesion">Sesion</string>
    <string name="title_profile">Perfil</string>
    <string name="title_categoria">Categorias</string>
    <string name="title_programcion">Programacion</string>
    <string name="title_ciencias">Ciencias de datos</string>
    <string name="title_algoritmo">Algoritmos</string>
    <string name="title_desarrollo">Desarrolo web</string>
    <string name="title_ux">UX/UI</string>
    <string name="title_tutoria">Nueva tutoria</string>
    <string name="title_movil">Android/IOS</string>
    <string name="title_tutoria_aprende">Aprende ya</string>
    <string name="title_tutoria_btn">Ver mas</string>
    <string name="title_tutoria_dos">Tutoria</string>
    <string name="title_reunion">Unir a la reunion</string>
    <string name="title_llamada">Cuando empieces la llamada lo veras aqui</string>
    <string name="title_registro">Bienvenido registrate ya</string>
    <string name="title_registro_usuario">Registrase</string>
    <string name="title_iniciar_sesion">Iniciar sesion</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
</resources>