<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/buscador_curso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="5dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buscador_curso"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_light_background"
            >
            <TextView
                android:id="@+id/text_categorias_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_categoria"
                android:textColor="@color/CustomColor9"
                android:textSize="25sp"
                android:fontFamily="@font/robotobold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />
            <Button
                android:id="@+id/btn_algoritmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_algoritmo"
                android:textSize="12sp"
                android:textColor="@color/CustomColor5"
                android:fontFamily="@font/roboregula"
                android:backgroundTint="?attr/colorErrorContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_programacion"
                app:layout_constraintTop_toBottomOf="@id/text_categorias_container"
                app:layout_constraintHorizontal_chainStyle="spread"
                />
            <Button
                android:id="@+id/btn_programacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_programcion"
                android:textSize="12sp"
                android:fontFamily="@font/roboregula"
                android:textColor="@color/CustomColor5"
                android:backgroundTint="?attr/colorSurface"
                app:layout_constraintStart_toEndOf="@id/btn_algoritmo"
                app:layout_constraintEnd_toStartOf="@id/btn_ciencia"
                app:layout_constraintTop_toBottomOf="@id/text_categorias_container"

                />
            <Button
                android:id="@+id/btn_ciencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ciencias"
                android:textSize="12sp"
                android:fontFamily="@font/roboregula"
                android:textColor="@color/CustomColor5"
                android:backgroundTint="?attr/colorSurfaceVariant"
                app:layout_constraintStart_toEndOf="@id/btn_programacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_categorias_container"

                />
            <Button
                android:id="@+id/btn_ux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ux"
                android:textSize="12sp"
                android:fontFamily="@font/roboregula"
                android:textColor="@color/CustomColor5"
                android:backgroundTint="?attr/colorBackgroundContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_web"
                app:layout_constraintTop_toBottomOf="@id/btn_programacion"
                app:layout_constraintHorizontal_chainStyle="spread"
                />
            <Button
                android:id="@+id/btn_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_desarrollo"
                android:textColor="@color/CustomColor5"
                android:textSize="12sp"
                android:fontFamily="@font/roboregula"
                android:backgroundTint="?attr/colorTertiaryContainer"
                app:layout_constraintStart_toEndOf="@id/btn_ux"
                app:layout_constraintEnd_toStartOf="@id/btn_movil"
                app:layout_constraintTop_toBottomOf="@id/btn_programacion"

                />
            <Button
                android:id="@+id/btn_movil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_movil"
                android:textColor="@color/CustomColor5"
                android:textSize="12sp"
                android:fontFamily="@font/roboregula"
                android:backgroundTint="?attr/colorTertiary"
                app:layout_constraintStart_toEndOf="@id/btn_web"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_programacion"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCategorias"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>