<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <SearchView
        android:id="@+id/btn_buscador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_contenedor"

            >

            <TextView
                android:id="@+id/txt_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tutoria"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/CustomColor1"
                android:fontFamily="@font/robotobold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.1"

                />
            <TextView
                android:id="@+id/txt_mensaje_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tutoria_aprende"
                android:textSize="20sp"
                android:textColor="@color/CustomColor1"
                android:fontFamily="@font/robotobold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_mensaje"
                app:layout_constraintHorizontal_bias="0.1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tutoria_btn"
                android:fontFamily="@font/roboregula"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_mensaje_card"
                app:layout_constraintHorizontal_bias="0.1"
                android:layout_marginTop="5dp"
                />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/login"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.3"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_tutoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tutoria_dos"
        android:textSize="25sp"
        android:fontFamily="@font/robotobold"
        app:layout_constraintTop_toBottomOf="@+id/card_datos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.2"
        android:layout_marginTop="30dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_tutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_tutoria"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>