<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seed"
    tools:context=".registro_usuario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registro"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/login"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/shape"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/nameUser"
        android:layout_width="0dp"
        android:inputType="text"
        android:hint="Usuario"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:id="@+id/contrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Contraseña"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/nameUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_registro_usuario"
        android:textColor="@color/md_theme_light_onPrimary"
        android:backgroundTint="@color/md_theme_dark_background"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrase"
        />


    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_iniciar_sesion"
        android:textColor="@color/md_theme_light_onPrimary"
        android:backgroundTint="?attr/colorBackground"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"/>



</androidx.constraintlayout.widget.ConstraintLayout>